attempted fix for IE9 not showing contact button link

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ a:link {
     padding: 50px;
 }
 
+.contactIcon span {
+    display: 0;
+}
+
 .contactIconSmall {
     display: none;
 }
